# leggen

./: .dockerignore  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.leggend  LICENSE  PROJECT.md  README.md  REFACTORING_SUMMARY.md  alembic.ini  cliff.toml  compose.dev.yml  compose.yml  config.example.toml  config.toml  docker-compose.yml  package-lock.json  pyproject.toml  test.db
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
alembic/: env.py
alembic/versions/: 1ba02efe481c_migrate_to_composite_key.py  4819c868ebc1_add_transaction_enrichments_table.py  be8d5807feca_add_display_name_column.py  bf30246cb723_migrate_balance_timestamps.py  dd9f6a55604c_add_logo_column.py  de8bfb1169d4_create_initial_tables.py  f854fd498a6e_add_sync_operations_table.py
docs/: TASKS.md  enable-banking-setup.md
frontend/: .env.development  Dockerfile  README.md  default.conf.template  eslint.config.js  index.html  package-lock.json  package.json  pwa-assets.config.json  tailwind.config.js  vite.config.ts
frontend/.claude/: settings.local.json
frontend/public/: browserconfig.xml
frontend/src/: App.css  App.tsx  index.css  main.tsx  routeTree.gen.ts  sw.ts
frontend/src/components/: AccountSettings.tsx  Accounts.tsx  AccountsOverview.tsx  AccountsSkeleton.tsx  AddBankAccountDrawer.tsx  AppSidebar.tsx  CategoryBadge.tsx  CategoryManager.tsx  Dashboard.tsx  DiscordConfigDrawer.tsx  ErrorBoundary.tsx  FiltersSkeleton.tsx  Header.tsx  LoadingSpinner.tsx  NotificationFiltersDrawer.tsx  Notifications.tsx  NotificationsSkeleton.tsx  PWAPrompts.tsx  RawTransactionModal.tsx  S3BackupConfigDrawer.tsx  Settings.tsx  Sidebar.tsx  SiteHeader.tsx  Sync.tsx  SyncScheduleDrawer.tsx  System.tsx  TelegramConfigDrawer.tsx  TransactionEnrichmentDrawer.tsx  TransactionSkeleton.tsx  TransactionsList.tsx  TransactionsTable.tsx
frontend/src/contexts/: AuthContext.tsx  BalanceVisibilityContext.tsx  ThemeContext.tsx
frontend/src/hooks/: usePWA.ts  useVersionCheck.ts
frontend/src/lib/: api.ts  pushNotifications.ts  timePeriods.ts  utils.ts
frontend/src/routes/: __root.tsx  accounts.tsx  analytics.tsx  bank-connected.tsx  index.tsx  login.tsx  notifications.tsx  settings.tsx  sync.tsx  system.tsx  transactions.tsx
frontend/src/types/: api.ts
leggen/: api_client.py  main.py
leggen-ui/: README.md  package-lock.json  package.json
leggen-ui/src/routes/: +layout.svelte  +page.svelte
leggen/api/: dependencies.py
leggen/api/dependencies/: auth.py
leggen/api/models/: accounts.py  backup.py  banks.py  categories.py  common.py  notifications.py  sync.py
leggen/api/routes/: accounts.py  auth.py  backup.py  banks.py  categories.py  enrichments.py  notifications.py  sync.py  transactions.py
leggen/background/: scheduler.py
leggen/commands/: balances.py  generate_auth_config.py  generate_sample_db.py  init.py  server.py  status.py  sync.py  transactions.py
leggen/commands/bank/: __init__.py  add.py  delete.py
leggen/database/: mongo.py  sqlite.py
leggen/models/: config.py  database.py
leggen/notifications/: discord.py  push.py  telegram.py
leggen/repositories/: __init__.py  account_repository.py  balance_repository.py  base_repository.py  category_repository.py  db.py  migration_repository.py  session_repository.py  sync_repository.py  transaction_repository.py
leggen/services/: backup_service.py  categorizer.py  data_processors.py  database.py  database_helpers.py  database_migrations.py  database_service.py  enablebanking_service.py  gocardless_service.py  notification_service.py  push_service.py  sync_service.py  transaction_processor.py
leggen/services/data_processors/: __init__.py  account_enricher.py  analytics_processor.py  balance_transformer.py  transaction_processor.py
leggen/utils/: auth.py  config.py  database.py  disk.py  gocardless.py  mongo.py  network.py  notifications.py  paths.py  sqlite.py  text.py
leggend/: config.py  main.py
leggend/api/models/: accounts.py  banks.py  common.py  notifications.py  sync.py
leggend/api/routes/: accounts.py  (+4 more)
leggend/background/: scheduler.py
leggend/services/: database_service.py  gocardless_service.py  notification_service.py  sync_service.py
leggend/utils/: gocardless.py
scripts/: generate_sample_db.py  release.sh
tests/: conftest.py
tests/unit/: test_analytics_fix.py  test_api_accounts.py  test_api_auth.py  test_api_backup.py  test_api_banks.py  test_api_categories.py  test_api_client.py  test_api_enrichments.py  test_api_transactions.py  test_backup_service.py  test_categorizer.py  test_config.py  test_configurable_paths.py  test_database_service.py  test_running_balance_calculation.py  test_scheduler.py  test_sqlite_database.py  test_sqlite_database.py.bak  test_sync_notifications.py
(+29 files in other folders)
