[tool.poetry]
name = "leggen"
version = "0.6.0"
description = "An Open Banking CLI"
authors = ["Elisiário Couto <elisiario@couto.io>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/elisiariocouto/leggen"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Utilities",
    "Topic :: Office/Business :: Financial",
]
keywords = [
    "openbanking",
    "cli",
    "psd2",
    "gocardless",
    "mongodb",
    "bank",
    "transactions",
    "finance",
]

packages = [{ "include" = "leggen" }]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
requests = "^2.31.0"
loguru = "^0.7.2"
tabulate = "^0.9.0"
pymongo = "^4.6.1"
discord-webhook = "^1.3.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"
pre-commit = "^3.6.0"
black = "^24.4.2"

[tool.poetry.scripts]
leggen = "leggen.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.ignore = ["E501", "B008", "B006"]
lint.extend-select = ["B", "C4", "PIE", "T20", "SIM", "TCH"]
