[project]
name = "leggen"
version = "0.6.9"
description = "An Open Banking CLI"
authors = [{ name = "Elisiário Couto", email = "elisiario@couto.io" }]
requires-python = "~=3.12"
readme = "README.md"
license = "MIT"
keywords = [
    "openbanking",
    "cli",
    "psd2",
    "gocardless",
    "mongodb",
    "bank",
    "transactions",
    "finance",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Utilities",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "click>=8.1.7,<9",
    "requests>=2.31.0,<3",
    "loguru>=0.7.2,<0.8",
    "tabulate>=0.9.0,<0.10",
    "pymongo>=4.6.1,<5",
    "discord-webhook>=1.3.1,<2",
]

[project.urls]
Repository = "https://github.com/elisiariocouto/leggen"

[project.scripts]
leggen = "leggen.main:cli"

[dependency-groups]
dev = [
    "ruff>=0.6.1",
    "pre-commit>=3.6.0",
]

[tool.hatch.build.targets.sdist]
include = ["leggen"]

[tool.hatch.build.targets.wheel]
include = ["leggen"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
lint.ignore = ["E501", "B008", "B006"]
lint.extend-select = ["B", "C4", "PIE", "T20", "SIM", "TCH"]
